# priompt

./: .eslintignore  .eslintrc.base.json  .eslintrc.json  .gitignore  .npmrc  LICENSE  README.md  esbuild.ts  eslintrc.base.json  init.sh  package.json  publish.sh  pull-from-open-source.sh  push-to-open-source.sh  rustfmt.toml  sync.sh  tsconfig.json  vitest.config.ts
.github/workflows/: publish.yml
examples/: .env.example  .eslintignore  .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts
examples/priompt/SimpleFunction/: example01.yaml
examples/priompt/SimplePrompt/: example01.yaml
examples/priompt/examplePrompt/: example01.yaml
examples/priompt/functionCallingPrompt/: example01.yaml
examples/src/: function-calling-prompt.tsx  index.ts  priompt-preview-handlers.ts  prompt.tsx
priompt/: .npmignore  README.md  package.json  tsconfig.json
priompt-preview/: .eslintrc.cjs  .npmignore  README.md  components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
priompt-preview/scripts/: serve.cjs
priompt-preview/src/: App.tsx  main.tsx  openai.ts  openai_interfaces.ts
priompt-preview/src/components/ui/: button.tsx  command.tsx  dialog.tsx  textarea.tsx
priompt/src/: base.test.tsx  components.test.tsx  components.tsx  index.ts  lib.ts  openai.ts  outputCatcher.ai.impl.ts  outputCatcher.ai.test.ts  outputCatcher.ai.ts  preview.ts  sourcemap.test.tsx  statsd.ts  tokenizer.ts  types.d.ts
priompt/src/__snapshots__/: components.test.tsx.snap
src/: components.tsx  index.ts  lib.ts  openai.ts  preview.ts  tokenizer.ts  types.d.ts
tiktoken-node/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
tiktoken-node/npm/darwin-arm64/: README.md  package.json
tiktoken-node/npm/darwin-x64/: README.md  package.json
tiktoken-node/npm/linux-arm64-gnu/: README.md  package.json
tiktoken-node/npm/linux-x64-gnu/: README.md  package.json
tiktoken-node/npm/win32-arm64-msvc/: README.md  package.json
tiktoken-node/npm/win32-x64-msvc/: README.md  package.json
tiktoken-node/src/: lib.rs
