[package]
edition = "2021"
name = "anysphere_tiktoken-node"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.11", default-features = false, features = [
  "napi4",
  "async",
] }
napi-derive = "2.16.11"
rustc-hash = "1.1.0"
base64 = "0.21.0"
pathdiff = "0.2"
log = { version = "0.4.21", features = ["kv"] }
tiktoken = { git = "https://github.com/anysphere/tiktoken-rs", rev = "753e0877630ff51c84afd9c97b2394ab95b50c54" }
rayon = "1.7.0"
anyhow = "1.0.69"
tokio = { version = "1.13.0", features = [
  "rt-multi-thread",
  "sync",
  "rt",
  "macros",
] }
once_cell = "1.18.0"
crossbeam-channel = "0.5.8"

[build-dependencies]
napi-build = "2.0.1"
